[workspace]
members = ["lsor", "lsor-core", "lsor-proc-macro"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"

[workspace.dependencies]
async-graphql = { version = "7", features = ["chrono", "url", "uuid"] }
sqlx = { version = "0.8", default-features = false, features = [
    "chrono",
    "json",
    "macros",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
uuid = { version = "1", default-features = false, features = ["v4", "serde"] }
tracing = { version = "0.1" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
base64 = { version = "0.21" }
