[package]
name = "laser"
version = "0.1.0"
edition = "2021"

[dependencies]
laser-core = { path = "../laser-core" }
laser-proc-macro = { path = "../laser-proc-macro" }

[dev-dependencies]
async-graphql = { version = "7.0", features = ["chrono", "url", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = [
    "chrono",
    "json",
    "macros",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
uuid = { version = "1.7", features = ["v4", "serde"] }
