[package]
name = "lsor-core"
description = "lsor-core"
license = "MIT"

[package.edition]
workspace = true
[package.version]
workspace = true

[dependencies]
async-graphql = {workspace = true}
base64 = {workspace = true }
chrono = { workspace  = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
prqlc = { version = "0.13" }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
