[package]
name = "lsor-proc-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
sqlx-macros-core = { version = "0.7", features = [
    "chrono",
    "json",
    "postgres",
    "uuid",
] }
syn = { version = "1.0.84", features = ["full"] }
quote = { version = "1.0" }
