[package]
name = "lsor"
version = "0.1.0"
edition = "2021"
description = "An opinionated kind-of-ORM-but-not-really that allows you to write SQL statements using Rust"
license = "MIT"

[dependencies]
lsor-core = { path = "../lsor-core", version= "0.1.0"  }
lsor-proc-macro = { path = "../lsor-proc-macro", version="0.1.0" }

[dev-dependencies]
async-graphql = { version = "7.0", features = ["chrono", "url", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sqlx = { version = "0.7", features = [
    "chrono",
    "json",
    "macros",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
uuid = { version = "1.7", features = ["v4", "serde"] }
