[package]
name = "lsor"
description = "An opinionated kind-of-ORM-but-not-really that allows you to write SQL statements using Rust"
license = "MIT"

[package.edition]
workspace = true
[package.version]
workspace = true

[dependencies]
lsor-core = { path = "../lsor-core", version = "0.1.0" }
lsor-proc-macro = { path = "../lsor-proc-macro", version = "0.1.0" }

[dev-dependencies]
async-graphql = {workspace = true}
base64 = {workspace = true }
chrono = { workspace  = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
